--- a/app/src/main/res/layout/activity_polizas.xml
+++ b/app/src/main/res/layout/activity_polizas.xml
@@ -7,10 +7,100 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.salesianos.jose.polizas.Polizas">
+    tools:context="com.salesianos.jmpgarcia.polizas.Polizas"
+    android:background="#FFFF99">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/titulo"
+        android:text="@string/titulo"
+        android:textColor="#0070C0"
+        android:textSize="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/edad"
+        android:id="@+id/edad"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:layout_below="@+id/titulo"
+        android:layout_alignLeft="@+id/titulo"
+        android:layout_alignStart="@+id/titulo"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="70dp" />
+
+    <EditText
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned"
+        android:ems="10"
+        android:id="@+id/insertaedad"
+        android:layout_below="@+id/titulo"
+        android:layout_toRightOf="@+id/edad"
+        android:layout_toEndOf="@+id/edad"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp" />
+
+    <Switch
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:text="@string/estado"
+        android:id="@+id/estado"
+        android:textColor="#000000"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        android:layout_below="@+id/insertaedad"
+        android:layout_alignLeft="@+id/edad"
+        android:layout_alignStart="@+id/edad"
+        android:layout_marginTop="20dp"
+        android:background="#D9D9D9"
+        android:layout_marginLeft="-60dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/calcular"
+        android:background="#3D79C1"
+        android:textColor="#FFFFFF"
+        android:id="@+id/calcular"
+        android:layout_marginTop="32dp"
+        android:textStyle="bold"
+        android:layout_below="@+id/estado"
+        android:layout_alignLeft="@+id/estado"
+        android:layout_alignStart="@+id/estado"
+        android:layout_marginLeft="80dp"
+        android:onClick="showText" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Borrar"
+        android:background="#3D79C1"
+        android:textColor="#FFFFFF"
+        android:id="@+id/borrar"
+        android:layout_below="@+id/calcular"
+        android:layout_alignLeft="@+id/calcular"
+        android:layout_alignStart="@+id/calcular"
+        android:layout_marginTop="24dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cajatexto"
+        android:layout_gravity="center"
+        android:textColor="#000000"
+        android:background="#DCE6F2"
+        android:layout_below="@+id/borrar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
+        />
+
 </RelativeLayout>
